   * Added run_file FormulaAI function to allow running .fai scripts directly
     from in-game console
   * Fixed bug #13295: made enemy_units formula return only those units which
     are not incapacitated (for example, it now ignores stoned units )
   * Implemented FR #13348: added timeofday_modifier function to formula AI
   * Added attacks_left attribute to unit callable
 * Graphics:
   * New type of animation : "recruiting" used by leaders when recruiting
     units
   * New portrait for Orc Grunt, Dwarf Fighter (alternative), Goblin Spearman
     Ogre/Young Ogre, Trapper, Ranger
   * Image path functors:
     * New functor, ~NOP(), which does nothing.
     * The ~RC() image functor does not accept the special palette switch
       ~RC(palette1=palette2) syntax anymore. ~PAL(palette1>palette2) should
       be used instead
 * Language and i18n:
   * new translations: Icelandic
   * updated translations: British English, Catalan, Chinese (Simplified),
      Czech, Dutch, German, Finnish, Hebrew, Hungarian, Indonesian, Italian,
      Norwegian, Polish, Russian, Slovak, Swedish, Turkish.
   * Updated CJK character range
   * Fixed word wrapping in CJK languages (patch #1140 from sylecn)
   * Remove female^ descriptions of Outlaw, Footpad, Fugitive, Dark Adept
 * Multiplayer server:
   * Implemented automatic saving of game replays.
   * Implemented the adminmsg command to allow players to send messages to
     currently available admins. (FR #9218)
 * Savegames
   * Providing a new simpler interface for dealing with savegames
 * User interface:
   * Fixed bug #13257: Attack dialog always uses the active name of a weapon
     special
   * Fix missing faction column when waiting that the host start the game,
     plus some other unwanted changes there (bug #13243)
   * Making the game return to the add-on install dialog just before
     installing one, and with its entry selected
   * Implemented FR #13321: added "unit advances=N" command to debug console