@@ -804,6 +804,11 @@
         name = "J.R. Blain (Cowboy)"
     [/entry]
     [entry]
+    	name = "Jan Polak (benetnash)"
+    	comment = "Formula AI contributions"
+    	email = "benetnash_AT_icpnet.pl"
+    [/entry]
+    [entry]
         name = "Jan Zvánovec (jaz)"
     [/entry]
     [entry]
